--- a/public/index.html
+++ b/public/index.html
@@ -190,6 +190,13 @@
 			alert(itemName + " has been saved to your favorites list!");
 		});
 
+		$(document).ready(function(){
+			var favorites = JSON.parse(localStorage.getItem('favoriteItems'));
+			for (var itemName in favorites) {
+				var obj = '<div>'+itemName+'<div class="pull-right"><button role="button">Delete</button></div></div>';
+				$('#item-favorites-div').append(obj); //TRYING TO APPEND EACH FAVORITE ITEM TO THE FAVORITES DIV
+			}
+		});
 	</script>
 	
 <div id="page"></div><!-- This is where the actual body of the "pages" start, inherited to from phase 1 -->
@@ -351,6 +358,10 @@
                 <h4>Available Menus</h4>
                 <div className="sub-menu-selection-container list-group">
                   {menus}
+                </div>
+                <h4>Favorites</h4>
+                <div id="item-favorites-div" className="sub-menu-selection-container list-group">
+
                 </div>
               </div>
 
